--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             -->
 
         <!-- Start Single Page Apps for GitHub Pages -->
-            <script type="text/javascript"> // Single Page Apps for GitHub Pages
+            <!-- <script type="text/javascript"> // Single Page Apps for GitHub Pages
             // MIT License
             // https://github.com/rafgraph/spa-github-pages
             // This script checks to see if a redirect is present in the query string,
@@ -42,7 +42,7 @@
                     window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash);
                 }
             }(window.location))
-        </script>
+        </script> -->
         <!-- End Single Page Apps for GitHub Pages -->
         <title>React App</title>
     </head>
